<resources>
    <string name="app_name">PHN-TASK</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="new_account">Create a new account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_instructions">Please enter the login details to start \nusing app</string>
    <string name="registration_instructions">Please put your information below to \ncreate a new account</string>
    <string name="not_a_member_join_now">Not a member? Join now</string>
    <string name="already_have_a_account_join_now">Already have a account? Join now</string>
    <string name="register_now">Register now</string>
</resources>