<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_20sdp"
        tools:context=".view.RegistrationActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            style="@style/TextAppearance.Material3.HeadlineMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="@string/new_account"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/subtitle"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/registration_instructions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/username"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_14sdp"
            app:circularflow_radiusInDP="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/email"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_14sdp"
            app:circularflow_radiusInDP="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_username" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:boxBackgroundColor="@color/gray_light"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_14sdp"
                app:circularflow_radiusInDP="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:boxBackgroundColor="@color/gray_light"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm__password"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_14sdp"
                app:circularflow_radiusInDP="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/register_now"
            app:cornerRadius="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_confirm_password" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_new_member"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/already_have_a_account_join_now"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>